--- a/app/assets/styles/partials/_mission.scss
+++ b/app/assets/styles/partials/_mission.scss
@@ -1,7 +1,7 @@
 #mission {
 	position: relative;
 	background-image: url("/assets/images/mobile/mission_bg.jpg");
-	background-attachment: fixed;
+	// background-attachment: fixed;
 	height: 900px;
 	width: 100%;
 	background-size: 600px auto;
